Fix spacing in About

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -456,6 +456,7 @@ footer {
     p {
         color: $text;
         margin: 0;
+        padding-bottom: 1em;
     }
 }
 
